fixed layout spacing on homepage

--- a/react-app/src/components/AllServices/allServices.css
+++ b/react-app/src/components/AllServices/allServices.css
@@ -8,7 +8,7 @@
     overflow: hidden;
     position: relative;
     /* padding-left: 1%; */
-    margin-bottom: 5%;
+    margin-bottom: 4%;
     /* object-fit: cover; */
     border: 1px solid #e4e5e7
 }
